# nxrb

./: .nxrb.toml  .nxrbconf  Cargo.toml  README.md  flake.nix  package.nix  result  shell.nix
.direnv/: nix-profile-26.05-qmqfjcv57sha8g97  nix-profile-26.05-qmqfjcv57sha8g97.rc  nix-tmp-profile.41435  nix-tmp-profile.41435-1-link
src/: cli.rs  config.rs  helpers.rs  main.rs  notification.rs
