[package]
name = "nxrb"
version = "0.1.0"
edition = "2024"
authors = [ "mastermach50" ]
description = "A simple NixOS build helper"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
whoami = "2.1.1"
